--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ h1 {
     color: white;
     margin: 20px 0;
     font-size: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .busca {
@@ -57,7 +60,7 @@ h1 {
     border: 1px dotted #FFF;
     margin-top: 20px;
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .titulo {
@@ -119,6 +122,6 @@ h1 {
 }
 
 .aviso {
-    color: #FFF;
+    color: black;
     padding-top: 20px;
 }
